2006-04-07  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (Interlocks): fix some typos, mention use
	of SlaveLocks for performance tests

	* docs/examples/twisted_master.cfg: update to match current usage

	* buildbot/changes/p4poller.py (P4Source): add new arguments:
	password, p4 binary, pollinterval, maximum history to check.
	Patch from an anonymous sf.net contributor, SF#1219384.
	* buildbot/process/step.py (P4Sync.__init__): add username,
	password, and client arguments.
	* buildbot/slave/commands.py (P4Sync): same

2006-04-05  Brian Warner  <warner@lothar.com>

	* buildbot/process/factory.py (BuildFactory.addStep): new method
	to add steps to a BuildFactory. Use it instead of f.steps.append,
	and you can probably avoid using the s() convenience function.
	Patch from Neal Norwitz, sf.net #1412605.
	(other): update all factories to use addStep
	* buildbot/process/process_twisted.py: update all factories to use
	addStep.

2006-04-03  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py: modified find-the-VC-command logic to
	work under windows too. Adapted from a patch by Niklaus Giger,
	addresses SF#1463399.

	* buildbot/test/__init__.py: set $LANG to 'C', to insure that
	spawned commands emit parseable results in english and not some
	other language. Patch from Niklaus Giger, SF#1463395.

	* README (INSTALLATION): discourage users from running unit tests on
	a "network drive", patch from Niklaus Giger, SF#1463394.

2006-03-22  Brian Warner  <warner@lothar.com>

	* contrib/svn_buildbot.py: rearrange, add an easy-to-change
	function to turn a repository-relative pathname into a (branch,
	branch-relative-filename) tuple. Change this function to handle
	the branch naming policy used by your Subversion repository.
	Thanks to AllMyData.com for sponsoring this work.

2006-03-16  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: add python-mode declaration for
	vim. Thanks to John Pye for the patch.
