@@ -7,7 +7,35 @@ from email.Utils import mktime_tz, parsedate_tz
 
 from twisted.trial import unittest
 from twisted.internet import defer, reactor, utils
-from twisted.python.procutils import which
+try:
+    from twisted.python.procutils import which
+except ImportError:
+    # copied from Twisted circa 2.2.0
+    def which(name, flags=os.X_OK):
+        """Search PATH for executable files with the given name.
+
+        @type name: C{str}
+        @param name: The name for which to search.
+
+        @type flags: C{int}
+        @param flags: Arguments to L{os.access}.
+
+        @rtype: C{list}
+        @param: A list of the full paths to files found, in the
+        order in which they were found.
+        """
+        result = []
+        exts = filter(None, os.environ.get('PATHEXT', '').split(os.pathsep))
+        for p in os.environ['PATH'].split(os.pathsep):
+            p = os.path.join(p, name)
+            if os.access(p, flags):
+                result.append(p)
+            for e in exts:
+                pext = p + e
+                if os.access(pext, flags):
+                    result.append(pext)
+        return result
+
 #defer.Deferred.debug = True
 
 from twisted.python import log
